{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 18,
  "lineage": "001d8915-9c9d-17b7-12e6-d4aebed6e207",
  "resources": [
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633489328820:network-acl/acl-00b0d1f3d8a6b63c2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              }
            ],
            "id": "acl-00b0d1f3d8a6b63c2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "633489328820",
            "subnet_ids": [],
            "tags": {
              "Name": "my-nacl"
            },
            "tags_all": {
              "Name": "my-nacl"
            },
            "vpc_id": "vpc-0c4c53580589f19b8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1869955488",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00b0d1f3d8a6b63c2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.nacl"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1926152460",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00b0d1f3d8a6b63c2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.nacl"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3007323852",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00b0d1f3d8a6b63c2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nacl.aws_network_acl.nacl"
          ]
        }
      ]
    }
  ]
}